fix bugs on small devices

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -52,6 +52,6 @@ body {
 }
 @media(max-width:400px){
   .contentWrapper{
-  margin:0 16px;
+  margin:0 10px;
 }
 }
