--- a/my-app/src/Components/ChecklistCategory/ChecklistCategory.module.css
+++ b/my-app/src/Components/ChecklistCategory/ChecklistCategory.module.css
@@ -73,6 +73,7 @@
   .categoryWrapper{
     width: 100%;
     max-width: 100%;
+    min-width: auto;
   }
 }
 
